src/objects/Engagement__c.object
<CustomObject>
    <fields>
        <fullName>AS_Locality_Formula__c</fullName>
        <formula>TEXT(Contact__r.Account.AS_Locality__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AS Locality Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Locality__c</fullName>
        <label>AS Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_raised__c</fullName>
        <label>Amount raised</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_type__c</fullName>
        <label>Campaign type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cupcake day</fullName>
                </value>
                <value>
                    <fullName>Elf day</fullName>
                </value>
                <value>
                    <fullName>Memory walk</fullName>
                </value>
                <value>
                    <fullName>DAW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_fundraiser_referral_name__c</fullName>
        <label>Community fundraiser referral name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Youth_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DF_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Champion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DF_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dementia Friend Champion</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipName>Youth_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DF_Champion_email__c</fullName>
        <formula>DF_Champion__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DF Champion email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Referred__c</fullName>
        <label>Date Referred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_ISR_form__c</fullName>
        <label>Date received ISR form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_recognition_form__c</fullName>
        <label>Date received recognition form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_session_requested__c</fullName>
        <label>Date session requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_DFs_reported__c</fullName>
        <label>Number of DFs reported</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <label>Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KS1 in English language</fullName>
                </value>
                <value>
                    <fullName>KS2 in English language</fullName>
                </value>
                <value>
                    <fullName>KS3 in English language</fullName>
                </value>
                <value>
                    <fullName>KS4 in English language</fullName>
                </value>
                <value>
                    <fullName>Presentation in English language</fullName>
                </value>
                <value>
                    <fullName>KS1 in Welsh language</fullName>
                </value>
                <value>
                    <fullName>KS2 in Welsh language</fullName>
                </value>
                <value>
                    <fullName>KS3 in Welsh language</fullName>
                </value>
                <value>
                    <fullName>KS4 in Welsh language</fullName>
                </value>
                <value>
                    <fullName>Presentation in Welsh language</fullName>
                </value>
                <value>
                    <fullName>KS1 in Irish language</fullName>
                </value>
                <value>
                    <fullName>KS2 in Irish language</fullName>
                </value>
                <value>
                    <fullName>KS3 in Irish language</fullName>
                </value>
                <value>
                    <fullName>KS4 in Irish language</fullName>
                </value>
                <value>
                    <fullName>Presentation in Irish language</fullName>
                </value>
                <value>
                    <fullName>Social Action on Dementia handbook</fullName>
                </value>
                <value>
                    <fullName>A Million Hands handbook</fullName>
                </value>
                <value>
                    <fullName>Volunteering information</fullName>
                </value>
                <value>
                    <fullName>Animation and Activities</fullName>
                </value>
                <value>
                    <fullName>Animation and Activities in Welsh Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_member_referred_to__c</fullName>
        <label>Staff member referred to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>YE_Dementia_Friends</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Resources__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Dementia_Friends</value>
        </filters>
        <label>Dementia Friends</label>
    </listViews>
    <listViews>
        <fullName>YE_Fund_Raising</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Fundraising</value>
        </filters>
        <label>Fund Raising</label>
    </listViews>
    <listViews>
        <fullName>YE_Local_Service_Match</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Local_service_match</value>
        </filters>
        <label>Local Service Match</label>
    </listViews>
    <listViews>
        <fullName>YE_Resources</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Resources__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Resources_requested</value>
        </filters>
        <label>Resources</label>
    </listViews>
    <nameField>
        <displayFormat>YE{000000}</displayFormat>
        <label>Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <recordTypes>
        <fullName>Dementia_Friends</fullName>
        <active>true</active>
        <label>Dementia Friends</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising</fullName>
        <active>true</active>
        <label>Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_service_match</fullName>
        <active>true</active>
        <label>Local service match</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resources_requested</fullName>
        <active>true</active>
        <label>Resources requested</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>